Revert "Fix tec on mobile"
This reverts commit 18dd6aae31db4274d4b40f71c8fad6b51223d71d.

--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -62,7 +62,7 @@
         justify-content: center;
     }
     .tecnologias{
-        font-size: 45pt;
+        font-size: 50pt;
     }
 
     /* CONTATO */
